--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.datasource.password=Apink_0419
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 server.port=1808
+logging.level.root=INFO
 logging.file.path=logs/
 logging.file.name=logs/application.log
 logging.patter.console=%d{yyyy-MM-dd HH:mm:ss} [%thread]%-5level %logger{36} - %msg%n
